--- a/apps/css/3d_character.css
+++ b/apps/css/3d_character.css
@@ -1328,11 +1328,9 @@ body {
     color: #9f9f9f;
   }
   #type-of-avatar .vr-image-2 {
-    width: 570px;
+    width: 100%;
     height: 350px;
     margin-top: 100px;
-    margin-right: 100px;
-    margin-left: 100px;
   }
   #type-of-avatar .vr-avatar-title2 {
     font-family: "Panchang-Bold";
@@ -1345,7 +1343,6 @@ body {
     margin-top: 30px;
     letter-spacing: 0.03em;
     margin-left: 100px;
-    margin-right: 100px;
     color: #ffffff;
   }
   #type-of-avatar .vr-avatar-detail2 {
